scrolling fixed on mobile

--- a/public/canvas.css
+++ b/public/canvas.css
@@ -5,6 +5,6 @@
 }
 
 body {
-  overflow-y: hidden;
-  overflow-x: hidden;
+  overflow: hidden;
+  position: relative;
 }
